--- a/app/views/admin/shared/actions/_contents.html.haml
+++ b/app/views/admin/shared/actions/_contents.html.haml
@@ -1,2 +1,4 @@
 - if can? :manage, ContentType
   = link_to content_tag(:em) + content_tag(:span, t('admin.content_types.index.new')), new_admin_content_type_url
+
+= render_cell 'admin/site_locale_picker', :show, :site => current_site, :locale => I18n.site_locale
