--- a/app/views/admin/my_account/edit.html.haml
+++ b/app/views/admin/my_account/edit.html.haml
@@ -40,8 +40,7 @@
           = f.radio_button :locale, locale
           %label{ :for => "my_account_locale_#{locale.downcase}" }
             = image_tag "admin/icons/flags/#{locale}.png"
-            = t(".#{locale}")
-          / &nbsp;
+            = t("admin.locales.#{locale}")
 
 
   = render 'admin/shared/form_actions', :button_label => :update
