--- a/app/views/locomotive/public/pages/show_toolbar.html.haml
+++ b/app/views/locomotive/public/pages/show_toolbar.html.haml
@@ -72,4 +72,4 @@
 
     = render_cell 'locomotive/content_locale_picker', :show, :site => current_site, :locale => current_content_locale
     = render 'locomotive/public/pages/templates'
-
+    #modal-form
