--- a/app/views/locomotive/custom_fields/types/_has_many.html.haml
+++ b/app/views/locomotive/custom_fields/types/_has_many.html.haml
@@ -11,7 +11,7 @@
 
   - content_for :head do
 
-    %script{ :type => 'text/html', :id => "#{name}_list" }
+    %script{ :type => 'text/html', :id => "#{content_type_slug}_#{name}_list" }
 
       %p.empty{ :style => 'display: none' }!= t('.empty')
 
@@ -22,7 +22,7 @@
       %p.actions
         = link_to t('.new_entry'), '#', :class => 'add'
 
-    %script{ :type => 'text/html', :id => "#{name}_entry" }
+    %script{ :type => 'text/html', :id => "#{content_type_slug}_#{name}_entry" }
       %li
         .handle.col
           = image_tag 'locomotive/form/icons/drag.png'
@@ -57,6 +57,7 @@
             = render "locomotive/custom_fields/types/#{_field.type}",
               :f            => form,
               :name         => _field.name.to_sym,
+              :content_type_slug => _field.content_type.slug,
               :field        => _field,
               :highlighted  => _field._id == target_content_type.label_field_id
 
