Many to many, select and has_many, file and so on works even if the nested form has a field of the same name

--- a/app/views/locomotive/custom_fields/types/_file.html.haml
+++ b/app/views/locomotive/custom_fields/types/_file.html.haml
@@ -1,4 +1,5 @@
 = f.input name,
   :label  => field.label,
   :hint   => field.hint,
-  :as     => :'Locomotive::File'
+  :as     => :'Locomotive::File',
+  :wrapper_html => { :id => "content_entry_#{content_type_slug}_#{name}_input" }
